Date	Added

2007/09/18
	* Rev. 11241 Added new maps to maps_athena.conf, and corresponding mapflags. [L0ne_W0lf]
	- Also added several missing maps, and cloned maps.
2007/09/17
	* Added missing force_4-1 and force_5-1 maps to the map list [ultramage]
2007/09/13
	* Trigger rate Miracle of the Sun, Moon and Stars is now 0.02% [Skotlex]
2007/09/10
	* Added 'quest_exp_rate', adjusts exp gained by 'getexp' [ultramage]
2007/09/05
	* Added 'nomemo' mapflags to some Cursed Abbey maps [Playtester]
2007/08/19
	* Added 'noteleport' mapflags to Dandelion's request maps. [SinSloth]
	* Fixed small mistake in confs causing some confusion [Paradox924X]
2007/08/15
	* Removed useless 'party_skill_penalty' config option
	* Removed 'Note 3' & 'Other information' since it doesn't apply anymore
2007/07/28
	* Removed useless refine_posword setting from script_athena.conf
2007/07/25
	* Adjusted motd.txt to not crash new clients
	* Removed backup_txt code since it's not needed anymore
2007/07/20
	* Adjusted client.conf's packetver table (latest now uses new value)
2007/07/18
	* Added delay_dependon_agi, both options are available now [ultramage]
2007/06/10
	* Rev. 10744 Fixed nopvp mapflag entry for mosk_in. [L0ne_W0lf]
2007/06/08
	* Added Moscovia maps into mapflags [Lupus]
2007/06/06
	* Added Moscovia maps in the map index [Lupus]
2007/06/01
	* Rev. 10701 Updated nowarpto map flags for Rachel quest maps. [L0ne_W0lf]
2007/06/01
	* Rev. 10663 Updated map flags for Rachel quest maps. [L0ne_W0lf]
2007/05/23
	* Reverted delay_dependon_agi -> delay_dependon_dex
2007/05/19
	* Enhanced log_athena.conf with global/main chat support [ultramage]
	- also changed the filter bit values, please reconfigure this option
2007/04/27
	* Can't teleport in kh_dun01 [Playtester]
	* You can now teleport in jupe_core [Playtester]
2007/04/24
	* monster_ai&0x400 disables all mob-casted skills having a range of 9
	  (monster.conf) [Skotlex]
2007/04/23