@@ -9220,7 +9220,7 @@ int atcommand_main(const int fd, struct map_session_data* sd, const char* comman
 			intif_announce(atcmd_output, strlen(atcmd_output) + 1, 0xFE000000, 0);
 
 			// Chat logging type 'M' / Main Chat
-			if( log_config.chat&16 && !(agit_flag && log_config.chat&32) )
+			if( log_config.chat&1 || (log_config.chat&32 && !(agit_flag && log_config.chat&64)) )
 				log_chat("M", 0, sd->status.char_id, sd->status.account_id, mapindex_id2name(sd->mapindex), sd->bl.x, sd->bl.y, NULL, message);
 		}
 		
