@@ -1,5 +1,8 @@
 Date	Added
 
+2007/09/24
+	* Added log_chat's '1 - log everything' (revert from r10850) [ultramage]
+	- don't forget to adjust your config file ... again.
 2007/09/18
 	* Rev. 11241 Added new maps to maps_athena.conf, and corresponding mapflags. [L0ne_W0lf]
 	- Also added several missing maps, and cloned maps.
